Fixed wrong color coding for vote averages

--- a/Movies Application/style.css
+++ b/Movies Application/style.css
@@ -51,7 +51,7 @@ main{
     width: 300px;
     margin: 1rem;
     background-color: var(--secondary-color);
-    box-shadow: 1 4px 5px rgba(0, 0,0,0.2);
+    box-shadow: 0 4px 5px rgba(0, 0,0,0.2);
     position: relative;
     overflow: hidden;
     border-radius: 3px;
@@ -66,6 +66,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 0.2rem;
     padding: 0.5rem 1rem 1rem;
     letter-spacing: 0.5px;
 }
@@ -86,11 +87,11 @@ main{
     color: lightgreen;
 }
 
-.movie-info span.green {
+.movie-info span.orange {
     color: orange;
 }
 
-.movie-info span.green {
+.movie-info span.red {
     color: red;
 }
 
